--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookie clicker</title>
 </head>
+
 <body>
     <header>
         <section id="score">
@@ -19,42 +21,30 @@
         </section>
     </header>
     <main>
-        <img src="" alt="image de PC">
-        <img src="" alt="image de PC">
-        <img src="" alt="image de PC">
-        <img src="" alt="image de PC">
-        <img src="" alt="image de PC">
+        <picture>
+            <img src="" alt="image de PC">
+        </picture>
+        <article>
+            <h2>
+                Boutique
+            </h2>
+            <button id="">
+                <h3>
+                    Auto clicker
+                </h3>
+            </button>
+            <button id="">
+                <h3>
+                    Multiplier
+                </h3>
+            </button>
+            <button id="">
+                <h3>
+                    Bonus
+                </h3>
+            </button>
+        </article>
     </main>
-    <aside>
-        <h2>
-            Boutique
-        </h2>
-        <section>
-            <h3>
-                objet 1
-            </h3>
-        </section>
-        <section>
-            <h3>
-                objet 2
-            </h3>
-        </section>
-        <section>
-            <h3>
-                objet 3
-            </h3>
-        </section>
-        <section>
-            <h3>
-                objet 4
-            </h3>
-        </section>
-        <section>
-            <h3>
-                objet 5
-            </h3>
-        </section>
-    </aside>
     <footer>
         <p>©Thomas</p>
         <p>©Marc</p>
