integrated animation & icon

--- a/Index.html
+++ b/Index.html
@@ -27,14 +27,16 @@
 
         </section>
         <section id="bonus">
+            <!--
             <h2>
                 Bonus
             </h2>
+            -->
         </section>
     </header>
     <main>
-        <picture>
-            <img src="" alt="image de PC">
+        <picture class="clickercontainer">
+            <img src="floppy.svg" class="clicker" alt="image de PC">
         </picture>
         <article>
             <h2>
