--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,10 @@
                             <sub class="active-multiplier">
                                 x 2
                             </sub>
-                        </span>  
+                                           </span>
+
+                            <!--maybe-->>               
+                        <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
                     </h1>
         </article>
 
