--- a/Index.html
+++ b/Index.html
@@ -15,13 +15,14 @@
     <header>
         <article id="scoredisplay">
                     <h1 id="points-score">
-                        <span id="score">0</span> lines of <span id="nowrap">code
-                            <sub class="active-multiplier">
+                        <span id="score">0</span> 
+                        lines of 
+                        <span id="nowrap">code
+                            <sub id="active-multiplier" class="active-multiplier">
                                 x 2
                             </sub>
-                                           </span>
-
-                            <!--maybe-->>               
+                        </span>
+                            <!--maybe-->              
                         <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
                     </h1>
         </article>
@@ -37,7 +38,7 @@
     </header>
     <main>
         <picture class="clickercontainer">
-            <img onclick="addToscore(1)" src="floppy.svg" class="clicker" alt="image de PC">
+            <img onclick="addToscore(1, multiplierPower, bonus)" src="floppy.svg" class="clicker" alt="image de PC">
         </picture>
         <article>
             <h2>
@@ -50,12 +51,15 @@
             </button>
             <button id="">
                 <h3>
-                    Multiplier
+                        <span id="multiplier">0</span>
+                        <button onclick="buyMultiplier()" id="multiplierPrice">50</button>
+                    </button>
                 </h3>
             </button>
             <button id="">
                 <h3>
-                    Bonus
+                    <span id="bonus">1</span>
+                    <button onclick="buyBonus()" id="bonusPrice">75</button>
                 </h3>
             </button>
         </article>
