--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookie clicker</title>
-
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
     <header>
         <article id="scoredisplay">
+            <h1 id="points-score">
+                <span id="score">
+                    0
+                </span> 
+                lines of 
+                <span id="nowrap">
+                    code
+                    <img id="icone-multiplier" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
+                </span>
+                </h1>
+            <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
+        </article>
+        <!--
+        <article id="scoredisplay">
+            <h1 id="points-score">
+                <span id="score">0</span> 
+                lines of 
+                <span id="nowrap">code
+                    <sub id="active-multiplier" class="active-multiplier">
+                        <img id="iconesize" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
+                    </sub>
+                </span>            
+                <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
+            </h1>
+        </article> 
+       <article id="scoredisplay">
                     <h1 id="points-score">
                         <span id="score">0</span> 
                         lines of 
@@ -20,10 +44,11 @@
                                 x 2
                             </sub>
                         </span>
-                            <!--maybe-->              
+                                         
                         <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
                     </h1>
-        </article>
+        </article> 
+    -->
 
         </section>
         <section id="bonus">
