--- a/Index.html
+++ b/Index.html
@@ -17,25 +17,24 @@
                 lines of 
                 <span id="nowrap">
                     code
-                    <img id="icone-multiplier" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
+                    <img id="icone-multiplier" class="animation-multiplier" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
                 </span>
                 </h1>
             <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
         </article>
-        <!--
-        <article id="scoredisplay">
+       <!--  <article id="scoredisplay">
             <h1 id="points-score">
                 <span id="score">0</span> 
                 lines of 
                 <span id="nowrap">code
                     <sub id="active-multiplier" class="active-multiplier">
-                        <img id="iconesize" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
+                        <img class="animation-multiplier" id="iconesize" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
                     </sub>
                 </span>            
                 <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
             </h1>
-        </article> 
-       <article id="scoredisplay">
+        </article>  -->
+<!--        <article id="scoredisplay">
                     <h1 id="points-score">
                         <span id="score">0</span> 
                         lines of 
@@ -43,13 +42,10 @@
                             <sub id="active-multiplier" class="active-multiplier">
                                 x 2
                             </sub>
-                        </span>
-                                         
+                        </span>      
                         <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
                     </h1>
-        </article> 
-    -->
-
+        </article> -->
         </section>
         <section id="bonus">
             <!--
