--- a/Index.html
+++ b/Index.html
@@ -65,7 +65,9 @@
             </h2>
             <button id="">
                 <h3>
-                    Auto clicker
+                    <span id="autoClicker">0</span>
+                    <button onclick="buyAutoClicker()" id="autoClickerPrice">25</button>
+                </button>
                 </h3>
             </button>
             <button id="">
