--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
                 lines of 
                 <span id="nowrap">
                     code
-                    <img id="icone-multiplier" class="animation-multiplier" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
+                    <img id="icone-multiplier" class="animation-score" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
                 </span>
                 </h1>
             <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
@@ -28,7 +28,7 @@
                 lines of 
                 <span id="nowrap">code
                     <sub id="active-multiplier" class="active-multiplier">
-                        <img class="animation-multiplier" id="iconesize" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
+                        <img class="animation-score" id="iconesize" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
                     </sub>
                 </span>            
                 <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
