--- a/Index.html
+++ b/Index.html
@@ -61,31 +61,31 @@
         </picture>
         <article>
             <section class="row">
-                <a href="#" class="btn blue active">
+                <a href="#" class="btn blue active" onclick="buyAutoClicker()">
                     <p class="btn-name">auto clicker</p>
                     <img src="svg/btn/auto click.svg" alt="auto-clicker icon">
                     <section class="btn-price">
-                        <p>100<span class="money-icon"></span></p>
+                        <p>25<span class="money-icon"></span></p>
                     </section>
                 </a>
-                <a href="#" class="btn grey active">
+                <a href="#" class="btn grey active" onclick="buyBonus()">
                     <p class="btn-name">bonus</p>
                     <img src="svg/btn/bonus.svg" alt="auto-clicker icon">
                     <section class="btn-price">
-                        <p>100<span class="money-icon"></span></p>
+                        <p>75<span class="money-icon"></span></p>
                     </section>
                 </a>
-                <a href="#" class="btn gold active">
+                <a href="#" class="btn gold active" onclick="buyMultiplier()">
                     <p class="btn-name">multiplier</p>
                     <img src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
                     <section class="btn-price">
-                        <p>100<span class="money-icon"></span></p>
+                        <p>50<span class="money-icon"></span></p>
                         
                     </section>
                 </a>
             </section>
             <section class="row">
-                <a href="#" class="btn blue disable">
+                <a href="#" class="btn blue disable" >
                     <p class="btn-name">auto clicker</p>
                     <img src="svg/btn/auto click.svg" alt="auto-clicker icon">
                     <section class="btn-price">
