--- a/Index.html
+++ b/Index.html
@@ -65,21 +65,21 @@
                     <p class="btn-name">auto clicker</p>
                     <img src="svg/btn/auto click.svg" alt="auto-clicker icon">
                     <section class="btn-price">
-                        <p>25<span class="money-icon"></span></p>
+                        <p><span id="AutoClickerPrice">25</span><span class="money-icon"></span></p>
                     </section>
                 </a>
                 <a href="#" class="btn grey active" onclick="buyBonus()">
                     <p class="btn-name">bonus</p>
                     <img src="svg/btn/bonus.svg" alt="auto-clicker icon">
                     <section class="btn-price">
-                        <p>75<span class="money-icon"></span></p>
+                        <p><span id="bonusPrice">75</span><span class="money-icon"></span></p>
                     </section>
                 </a>
                 <a href="#" class="btn gold active" onclick="buyMultiplier()">
                     <p class="btn-name">multiplier</p>
                     <img src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
                     <section class="btn-price">
-                        <p>50<span class="money-icon"></span></p>
+                        <p><span id="multiplierPrice">50</span><span class="money-icon"></span></p>
                         
                     </section>
                 </a>
@@ -109,9 +109,7 @@
                 </a>
             </section>
 <!--Fake Button -->
-            <h2>
-                Boutique
-            </h2>
+         
             <button id="">
                 <h3>
                     <span id="autoClicker">0</span>
