--- a/Index.html
+++ b/Index.html
@@ -7,22 +7,24 @@
     <title>Cookie clicker</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <article id="scoredisplay">
             <h1 id="points-score">
                 <span id="score">
                     0
-                </span> 
-                lines of 
+                </span>
+                lines of
                 <span id="nowrap">
                     code
-                    <img id="icone-multiplier" class="animation-multiplier" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
+                    <img id="icone-multiplier" class="animation-multiplier" src="svg/btn/multi_x2.svg"
+                        alt="auto-clicker icon">
                 </span>
-                </h1>
+            </h1>
             <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
         </article>
-       <!--  <article id="scoredisplay">
+        <!--  <article id="scoredisplay">
             <h1 id="points-score">
                 <span id="score">0</span> 
                 lines of 
@@ -34,7 +36,7 @@
                 <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
             </h1>
         </article>  -->
-<!--        <article id="scoredisplay">
+        <!--        <article id="scoredisplay">
                     <h1 id="points-score">
                         <span id="score">0</span> 
                         lines of 
@@ -59,63 +61,37 @@
         <picture class="clickercontainer">
             <img onclick="addToscore(1, multiplierPower, bonus)" src="floppy.svg" class="clicker" alt="image de PC">
         </picture>
-        <article>
-            <section class="row">
-                <a href="#" class="btn blue active">
-                    <p class="btn-name">auto clicker</p>
-                    <img src="svg/btn/auto click.svg" alt="auto-clicker icon">
-                    <section class="btn-price">
-                        <p>100<span class="money-icon"></span></p>
-                    </section>
-                </a>
-                <a href="#" class="btn grey active">
-                    <p class="btn-name">bonus</p>
-                    <img src="svg/btn/bonus.svg" alt="auto-clicker icon">
-                    <section class="btn-price">
-                        <p>100<span class="money-icon"></span></p>
-                    </section>
-                </a>
-                <a href="#" class="btn gold active">
-                    <p class="btn-name">multiplier</p>
-                    <img src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
-                    <section class="btn-price">
-                        <p>100<span class="money-icon"></span></p>
-                        
-                    </section>
-                </a>
-            </section>
-            <section class="row">
-                <a href="#" class="btn blue disable">
-                    <p class="btn-name">auto clicker</p>
-                    <img src="svg/btn/auto click.svg" alt="auto-clicker icon">
-                    <section class="btn-price">
-                        <p>100<span class="money-icon"></span></p>
-                    </section>
-                </a>
-                <a href="#" class="btn grey disable">
-                    <p class="btn-name">bonus</p>
-                    <img src="svg/btn/bonus.svg" alt="auto-clicker icon">
-                    <section class="btn-price">
-                        <p>100<span class="money-icon"></span></p>
-                    </section>
-                </a>
-                <a href="#" class="btn gold disable">
-                    <p class="btn-name">multiplier</p>
-                    <img src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
-                    <section class="btn-price">
-                        <p>100<span class="money-icon"></span></p>
-                        
-                    </section>
-                </a>
-            </section>
-        </article>
+        <section class="row">
+            <a href="#" class="btn blue active">
+                <p class="btn-name">auto clicker</p>
+                <img src="svg/btn/auto click.svg" alt="auto-clicker icon">
+                <section class="btn-price">
+                    <p>100<span class="money-icon"></span></p>
+                </section>
+            </a>
+            <a href="#" class="btn grey active">
+                <p class="btn-name">bonus</p>
+                <img src="svg/btn/bonus.svg" alt="auto-clicker icon">
+                <section class="btn-price">
+                    <p>100<span class="money-icon"></span></p>
+                </section>
+            </a>
+            <a href="#" class="btn gold active">
+                <p class="btn-name">multiplier</p>
+                <img src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
+                <section class="btn-price">
+                    <p>100<span class="money-icon"></span></p>
+                </section>
+            </a>
+        </section>
     </main>
     <footer>
         <p>©Thomas</p>
         <p>©Marc</p>
         <p>©Pauline</p>
-        <p>©Gonzalo</p>
+        <p>©Gonçalo</p>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
