--- a/Index.html
+++ b/Index.html
@@ -24,30 +24,6 @@
             </h1>
             <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
         </article>
-        <!--  <article id="scoredisplay">
-            <h1 id="points-score">
-                <span id="score">0</span> 
-                lines of 
-                <span id="nowrap">code
-                    <sub id="active-multiplier" class="active-multiplier">
-                        <img class="animation-score" id="iconesize" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
-                    </sub>
-                </span>            
-                <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
-            </h1>
-        </article>  -->
-        <!--        <article id="scoredisplay">
-                    <h1 id="points-score">
-                        <span id="score">0</span> 
-                        lines of 
-                        <span id="nowrap">code
-                            <sub id="active-multiplier" class="active-multiplier">
-                                x 2
-                            </sub>
-                        </span>      
-                        <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
-                    </h1>
-        </article> -->
         </section>
         <section id="bonus">
             <!--
@@ -63,25 +39,25 @@
         </picture>
 
         <section class="row">
-            <a href="#" class="btn blue active">
+            <a onclick="buyAutoClicker()" href="#" class="btn blue active">
                 <p class="btn-name">auto clicker</p>
                 <img src="svg/btn/auto click.svg" alt="auto-clicker icon">
                 <section class="btn-price">
-                    <p>100<span class="money-icon"></span></p>
+                    <p><span id="autoClickerPrice">50</span><span class="money-icon"></span></p>
                 </section>
             </a>
-            <a href="#" class="btn grey active">
+            <a onclick="buyBonus()" href="#" class="btn grey active">
                 <p class="btn-name">bonus</p>
-                <img src="svg/btn/bonus.svg" alt="auto-clicker icon">
+                <img src="svg/btn/bonus.svg" alt="bonus icon">
                 <section class="btn-price">
-                    <p>100<span class="money-icon"></span></p>
+                    <p><span id="bonusPrice">50</span><span class="money-icon"></span></p>
                 </section>
             </a>
-            <a href="#" class="btn gold active">
+            <a onclick="buyMultiplier()" href="#" class="btn gold active">
                 <p class="btn-name">multiplier</p>
-                <img src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
+                <img src="svg/btn/multi_x2.svg" alt="multiplier icon">
                 <section class="btn-price">
-                    <p>100<span class="money-icon"></span></p>
+                    <p><span id="multiplierPrice">50</span><span class="money-icon"></span></p>
                 </section>
             </a>
         </section>
