--- a/Index.html
+++ b/Index.html
@@ -21,39 +21,11 @@
                     <img id="icone-multiplier" class="animation-score" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
                 </span>
             </h1>
-            <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
         </article>
-        <!--  <article id="scoredisplay">
-            <h1 id="points-score">
-                <span id="score">0</span> 
-                lines of 
-                <span id="nowrap">code
-                    <sub id="active-multiplier" class="active-multiplier">
-                        <img class="animation-score" id="iconesize" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
-                    </sub>
-                </span>            
-                <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
-            </h1>
-        </article>  -->
-        <!--        <article id="scoredisplay">
-                    <h1 id="points-score">
-                        <span id="score">0</span> 
-                        lines of 
-                        <span id="nowrap">code
-                            <sub id="active-multiplier" class="active-multiplier">
-                                x 2
-                            </sub>
-                        </span>      
-                        <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
-                    </h1>
-        </article> -->
+
         </section>
         <section id="bonus">
-            <!--
-            <h2>
-                Bonus
-            </h2>
-            -->
+
         </section>
     </header>
     <main>
@@ -62,25 +34,25 @@
         </picture>
 
         <section class="row">
-            <a href="#" class="btn blue active">
+            <a href="#" class="btn blue active" onclick="buyAutoClicker()">
                 <p class="btn-name">auto clicker</p>
                 <img src="svg/btn/auto click.svg" alt="auto-clicker icon">
                 <section class="btn-price">
-                    <p>100<span class="money-icon"></span></p>
+                    <p><span id="autoClickerPrice">25</span><span class="money-icon"></span></p>
                 </section>
             </a>
-            <a href="#" class="btn grey active">
-                <p class="btn-name">bonus</p>
+            <a href="#" class="btn grey active" onclick="buyBonus()">
+                <p class="btn-name">bonus - 30s</p>
                 <img src="svg/btn/bonus.svg" alt="auto-clicker icon">
                 <section class="btn-price">
-                    <p>100<span class="money-icon"></span></p>
+                    <p><span id="bonusPrice">125</span><span class="money-icon"></span></p>
                 </section>
             </a>
-            <a href="#" class="btn gold active">
+            <a href="#" class="btn gold active" onclick="buyMultiplier()">
                 <p class="btn-name">multiplier</p>
                 <img src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
                 <section class="btn-price">
-                    <p>100<span class="money-icon"></span></p>
+                    <p><span id="multiplierPrice">200</span><span class="money-icon"></span></p>
                 </section>
             </a>
         </section>
