--- a/Index.html
+++ b/Index.html
@@ -18,8 +18,8 @@
                 lines of
                 <span id="nowrap">
                     code
-                    <img id="icone-multiplier" class="animation-score" src="/svg/btn/multi_x2.svg" alt="auto-clicker icon">
-                    <img id="icone-bonus" class="animation-score" src="/svg/btn/bonus.svg" alt="auto-clicker icon">
+                    <img id="icone-multiplier" class="animation-score" src="svg/btn/multi_x2.svg" alt="auto-clicker icon">
+                    <img id="icone-bonus" class="animation-score" src="svg/btn/bonus.svg" alt="auto-clicker icon">
                 </span>
             </h1>
             <p style="font-size:15px;"><span id="scorePerSecond">0</span> lines per second</p>
