--- a/Index.html
+++ b/Index.html
@@ -96,7 +96,7 @@
         <p>©Pauline</p>
         <p>©Gonçalo</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 </body>
 
 </html>
