--- a/Index.html
+++ b/Index.html
@@ -36,21 +36,21 @@
 
         <section class="row">
 
-            <a href="#" class="btn blue active" onclick="buyAutoClicker()">
+            <a href="#" id ="btn-autoclicker" class="btn blue disable" onclick="buyAutoClicker()">
                 <p class="btn-name">auto clicker</p>
                 <img src="svg/btn/auto click.svg" alt="auto-clicker icon">
                 <section class="btn-price">
                     <p><span id="autoClickerPrice">25</span><span class="money-icon"></span></p>
                 </section>
             </a>
-            <a href="#" class="btn grey active" onclick="buyBonus()">
+            <a href="#" id ="btn-bonus" class="btn grey disable" onclick="buyBonus()">
                 <p class="btn-name">bonus - 30s</p>
                 <img src="svg/btn/bonus.svg" alt="auto-clicker icon">
                 <section class="btn-price">
                     <p><span id="bonusPrice">125</span><span class="money-icon"></span></p>
                 </section>
             </a>
-            <a href="#" class="btn gold active" onclick="buyMultiplier()">
+            <a href="#" id ="btn-multiplier" class="btn gold disable" onclick="buyMultiplier()">
 
                 <p class="btn-name">multiplier</p>
                 <img src="svg/btn/multi_x2.svg" alt="multiplier icon">
@@ -61,34 +61,6 @@
                 </section>
             </a>
         </section>
-
-<!--Fake Button 
-            <h2>
-                Boutique
-            </h2>
-            <button id="">
-                <h3>
-                    <span id="autoClicker">0</span>
-                    <button onclick="buyAutoClicker()" id="autoClickerPrice">25</button>
-                </button>
-                </h3>
-            </button>
-            <button id="">
-                <h3>
-                        <span id="multiplier">0</span>
-                        <button onclick="buyMultiplier()" id="multiplierPrice">50</button>
-                    </button>
-                </h3>
-            </button>
-            <button id="">
-                <h3>
-                    <span id="bonus">0</span>
-                    <button onclick="buyBonus()" id="bonusPrice">75</button>
-                </h3>
-            </button>
-            -->
-        
-
     </main>
     <footer>
         <p>©Thomas</p>
@@ -98,5 +70,4 @@
     </footer>
     <script src="Script.js"></script>
 </body>
-
 </html>
