--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Author: Pauline Rohmer, Thomas Quertinmont, Gonzalo Silva, Marc Houtreille">
     <title>Cookie clicker</title>
     <link rel="stylesheet" href="style.css">
 </head>
