add change of images

--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <picture class="clickercontainer">
-            <img onclick="addToscore(1, multiplierPower, bonus)" src="floppy.svg" class="clicker" alt="image de PC">
+            <img id="change- image" onclick="addToscore(1, multiplierPower, bonus)" src="svg/floppy.svg" class="clicker" alt="image de PC">
         </picture>
 
         <section class="row">
