--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Author: Pauline Rohmer, Thomas Quertinmont, Gonzalo Silva, Marc Houtreille">
-    <title>Cookie clicker</title>
+    <title>CODE CLICKER</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
